# ParaMCP

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml
scratch/: legacy_mock.py  stateless_mock.py  test_config.json
src/: hub.rs  lib.rs  main.rs  protocol.rs  server.rs
src/tools/: calculator.rs  fetch_url.rs  file_search.rs  mod.rs  sys_info.rs
src/transport/: http.rs  stdio.rs
tests/: server_tests.rs
