[package]
name = "paramcp"
version = "0.1.0"
edition = "2021"
description = "A high-performance Model Context Protocol (MCP) server conforming to the 2026-07-28 stateless spec"
license = "MIT"
keywords = ["mcp", "llm", "agent", "gateway", "json-rpc"]
categories = ["network-programming", "web-programming::http-server"]

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
sysinfo = "0.30"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
regex = "1"
clap = { version = "4", features = ["derive", "env"] }
